<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/listFragmentLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackground"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarList"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#4A3516"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay">


        <FrameLayout
            android:id="@+id/search_word_toolbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/delete_search_word"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:background="@drawable/cross_icon_white_50px" />

            <EditText
                android:id="@+id/search_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableStart="@drawable/search_icon_white_24px"
                android:drawablePadding="10sp"
                android:gravity="start"
                android:hint="@string/search_a_word"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/layout_rounded"
        android:backgroundTint="#FFFFFFFF"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarList">

        <ImageButton
            android:id="@+id/swapLanguageButton"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:backgroundTint="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/targetLanguageTextView"
            app:layout_constraintStart_toEndOf="@id/sourceLanguageTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/swap_icon" />

        <TextView
            android:id="@+id/sourceLanguageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/swapLanguageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/targetLanguageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="TextView"
            android:textAlignment="gravity"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/swapLanguageButton"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/recycler_view_words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_words"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/greyBackground"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewFilter" />

</androidx.constraintlayout.widget.ConstraintLayout>