...
        android:id="@+id/layoutCallPons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greyBackground">

        <ImageButton
            android:id="@+id/buttonCallPons"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_rounded"
            android:backgroundTint="#04B833"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/button_background_pons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonCallMyMemory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TranslateWithTextView" />

        <ImageButton
            android:id="@+id/buttonCallMyMemory"
            android:layout_width="0dp"
...
